--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_auth_buttons: ^0.8.0
+  google_fonts: any
+  cupertino_icons: ^0.1.3
+  provider: ^2.0.1
+  rounded_floating_app_bar: 0.1.0
+  material_design_icons_flutter: 4.0.5345
+  font_awesome_flutter: '>= 4.7.0'
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
